--- a/final_project/LSMcrowdsource/AppLogin/templates/AppLogin/create.html
+++ b/final_project/LSMcrowdsource/AppLogin/templates/AppLogin/create.html
@@ -6,31 +6,42 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="{% static 'AppLogin/style.css' %}">
+   <link rel="stylesheet" href="{% static 'AppLogin/style_new.css' %}">
    <script src="https://kit.fontawesome.com/883669fa4c.js" crossorigin="anonymous"></script>
    <title>Join us!</title>
 </head>
 
 <body>
-   <header>
-      <h2> Join us!</h2>
+
+   <header class = "center">
+      <h1 class = "logo">LSMcrowdsource</h1>
+      <h1>Join us!</h1>
    </header>
 
-   <nav>
-      <a class = "signin" href="{% url 'login:login_page' %}">Sign In</a>
-      <a class = "active_tab" href="create.html">Create Account</a>
+   <nav class = nav">
+      <ul>
+         <li><a class = "signin" href="{% url 'login:login_page' %}">Sign In</a></li>
+         <li><a class = "active_tab" href="create.html">Create Account</a></li>
+      </ul>
    </nav>
 
-<form class="signup" action="{% url 'login:registered' %}" method="post">
-   <!-- <i class="far fa-user"></i> -->
-   {% csrf_token %}
-   <input type="text" placeholder="Username" name="username">
-   <br>
-   <input type= "text" placeholder = "Full Name" name="fullname">
-   <input type= "number" placeholder = "Top-Up Amount (Just Make it Rain)" name="topup_amt">
-   <input type="password" placeholder ="Password" name="password">
-   <input type="Password" placeholder="Repeat your password" name='password_re'>
-   <br>
-   <button type="submit">Register</button>
-   <br>
-</form>
+<main>
+
+   <form class = "create" action="{% url 'login:registered' %}" method="post">
+      {% csrf_token %}
+      <i class="far fa-user-circle"></i>
+      <input type="text" placeholder="Username" name="username">
+      <br>
+      <i class="far fa-address-card"></i>
+      <input type= "text" placeholder = "Full Name" name="fullname"><br>
+      <i class="far fa-hand-holding-usd"></i>
+      <input type= "number" placeholder = "Top-Up Amount (Make it Rain!)" name="topup_amt"><br>
+      <i class="far fa-lock"></i>
+      <input type="password" placeholder ="Password" name="password"><br>
+      <i class="far fa-lock"></i>
+      <input type="Password" placeholder="Repeat your password" name='password_re'>
+      <button type="submit">Register</button>
+      <br>
+   </form>
+
+</main>
