--- a/final_project/LSMcrowdsource/AppLogin/templates/AppLogin/start.html
+++ b/final_project/LSMcrowdsource/AppLogin/templates/AppLogin/start.html
@@ -2,40 +2,42 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel = "stylesheet" href="{% static 'AppLogin/style.css' %}">
+   <link rel = "stylesheet" href="{% static 'AppLogin/style_new.css' %}">
    <script src="https://kit.fontawesome.com/883669fa4c.js" crossorigin="anonymous"></script>
    <title>Welcome!</title>
 </head>
 
 <body>
-   <header>
-      <h2> Welcome back!</h2>
+
+   <header class = "center">
+      <h1 class="logo">LSMcrowdsource</h1>
+      <h1> Welcome back!</h1>
    </header>
 
    <nav>
-      <a class = "active_tab" href="start.html">Sign In</a>  
-      <a href="{% url 'login:create_account' %}">Create Account</a>
+      <ul>
+         <li><a class = " active_tab" href="start.html">Sign In</a></li>
+         <li><a href="{% url 'login:create_account' %}">Create Account</a></li>
+      </ul>
    </nav>
 
-   <form class = "login" action="{% url 'login:process_login' %}" method="post"> 
-      <!-- <i class="far fa-user"></i> -->
-      {% csrf_token %}
-      <input type="text" placeholder = "Username" name='username'>
-      <br>
-      <input type="Password" placeholder = "Password" name="password">
-      <br>
-      <button type = "submit">Log in</button>
-      <br>
-   </form>
+   <main>
+      <form class = "login" action="{% url 'login:process_login' %}" method="post"> 
+         {% csrf_token %}
+         <i class="far fa-user"></i>
+         <input type="text" placeholder = "Username" name='username'>
+         <br>
+         <i class="far fa-lock"></i>
+         <input type="Password" placeholder = "Password" name="password">
+         <br>
+         <div class = "center"></div><button type = "submit">Log in</div>
+         <br>
+      </form>
 
-   </div>
+   </main>
 
-   </section>
-</main>
-
-
+</body>
 </html>
